2005-12-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/tcl.m4 (SC_CONFIG_CFLAGS): Define MACHINE
	for gcc builds. The lack of a definition of this
	variable in the manifest file was causing a
	runtime error in wish built with gcc.

2005-12-09  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkInt.decls:   move all platform test sources from tk lib into
	* generic/tkTest.c:      tktest directly, removes requirement to export
	* macosx/tkMacOSXTest.c: TkplatformtestInit from internal stubs table.
	* unix/Makefile.in:
	* win/Makefile.in:
	* win/makefile.vc:
	* win/tkWinTest.c:
	
	* generic/tkIntPlatDecls.h:
	* generic/tkStubInit.c: regen.

2005-12-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tcl.m4:       Add build support for Windows-x64 builds.
	* win/configure:    --enable-64bit now accepts =amd64|ia64 for
	* win/Makefile.in:  Windows 64-bit build variants (default: amd64)
	* win/makefile.vc:  [Bug 1369597]
	(TKOBJS): add tkWinTest.obj to regular Tk obj for TkplatformtestInit

	* win/configure.in: Add CE build support (some C code fixes needed)
	* win/wish.exe.manifest.in (new):     manifest must map in MACHINE
	* win/rc/wish.exe.manifest (removed): and VERSION to be correct.
	* unix/Makefile.in: fix dist target for manifest dir change

	* generic/tkTextTag.c (TkTextTagCmd): use correct arraySize for
	peered text widgets in [$text tag names]. [Bug 1375069 1374935]

2005-12-08  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDraw.c:   remove inclusion of tclInt.h and use of tcl
	* macosx/tkMacOSXFont.c:   internals wherever possible in tk/macosx, the
	* macosx/tkMacOSXInit.c:   only remaining tcl internals in TkAqua are
	* macosx/tkMacOSXNotify.c: TclServiceIdle() in tkMacOSXScrlbr.c and
	* macosx/tkMacOSXScrlbr.c: Tcl_Get/SetStartupScript() in tkMacOSXInit.c
				   [Bug 1336531].

	* macosx/tkMacOSXInt.h: sync comments with core-8-4-branch.

2005-12-07  Jeff Hobbs  <jeffh@ActiveState.com>
